# gerador-de-assinatura-de-email

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/copilot/: Architecture.md  Code_Exemplars.md  Coding_Standards.md  Project_Folder_Structure.md  Technology_Stack.md  Unit_Tests.md  Workflow_Analysis.md
.github/skills/adr-guard/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: employees.py  settings.py  signature.py
app/core/: config.py  security.py
app/domain/models/: __init__.py  brand_settings.py  department.py  email_signature.py  employee.py  job_title.py  role.py  system_user.py  template.py
app/domain/schemas/: employee.py  settings.py  signature.py
app/domain/services/: employee_service.py  signature_service.py  template_service.py  validation_service.py
app/infrastructure/: database.py
app/infrastructure/repository/: brand_settings_repository.py  department_repository.py  email_signature_repository.py  employee_repository.py  job_title_repository.py
app/templates/email/: default_signature.html
app/templates/pages/: index.html
docs/: ERD.md  swagger.yaml
docs/adr/: 0001-use-python.md  0002-modular-monolit-architecture.md
gerador_de_assinatura_de_email.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/unit/: test_health.py  test_render_endpoint.py  test_signature_service.py
